globus-net-manager (0.7-1+gt6.@distro@) @distro@; urgency=low

  * add file paramter to logging driver to set a file to log to.  use manager=logging;file=/path/to/file;.

 -- Globus Toolkit <support@globus.org>  Fri, 27 Mar 2015 03:19:40 -0500

globus-net-manager (0.6-1+gt6.@distro@) @distro@; urgency=low

  * Fix conflicts with globus-common-doc and globus-xio-doc

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 08:32:42 -0500

globus-net-manager (0.5-1+gt6.@distro@) @distro@; urgency=low

  * Fix test link on recent debians

 -- Globus Toolkit <support@globus.org>  Thu, 08 Jan 2015 13:13:52 -0500

globus-net-manager (0.4-2+gt6.@distro@) @distro@; urgency=low

  * Add dependency on libltdl-dev

 -- Globus Toolkit <support@globus.org>  Wed, 07 Jan 2015 21:24:39 -0500

globus-net-manager (0.4-1+gt6.@distro@) @distro@; urgency=low

  * Link in ltdl for tests

 -- Globus Toolkit <support@globus.org>  Wed, 07 Jan 2015 16:12:09 -0500

globus-net-manager (0.3-1+gt6.@distro@) @distro@; urgency=low

  * Tests run with static build

 -- Globus Toolkit <support@globus.org>  Mon, 05 Jan 2015 12:24:28 -0500

globus-net-manager (0.2-1+gt6.@distro@) @distro@; urgency=low

  * Fix missing skip test

 -- Globus Toolkit <support@globus.org>  Mon, 22 Dec 2014 13:12:58 -0500

globus-net-manager (0.1-1+gt6.@distro@) @distro@; urgency=low

  * check for python2.6-config

 -- Globus Toolkit <support@globus.org>  Fri, 19 Dec 2014 15:31:16 -0500

globus-net-manager (0.0-1+gt6.@distro@) @distro@; urgency=low

  * Initial packaging

 -- Globus Toolkit <support@globus.org>  Thu, 18 Dec 2014 08:30:24 -0500