@@ -1,13 +1,13 @@
 Name:		globus-net-manager
 %global _name %(tr - _ <<< %{name})
-Version:	0.7
+Version:	0.8
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Net Manager Library
 
 Group:		System Environment/Libraries
 License:	ASL 2.0
-URL:		http://www.globus.org/
-Source:	http://www.globus.org/ftppub/gt6/packages/globus_net_manager-0.7.tar.gz
+URL:		http://toolkit.globus.org/
+Source:	http://toolkit.globus.org/ftppub/gt6/packages/%{_name}-%{version}.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 Requires:	globus-common%{?_isa} >= 15.27
@@ -151,6 +151,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Mon Apr 13 2015 Globus Toolkit <support@globus.org> - 0.8-1
+- fix for attr not being used on connect()
+
 * Fri Mar 27 2015 Globus Toolkit <support@globus.org> - 0.7-1
 - add file paramter to logging driver to set a file to log to.  use manager=logging;file=/path/to/file;.
 
