@@ -1,3 +1,9 @@
+globus-net-manager (0.8-1+gt6.@distro@) @distro@; urgency=low
+
+  * fix for attr not being used on connect()
+
+ -- Globus Toolkit <support@globus.org>  Mon, 13 Apr 2015 17:00:47 -0500
+
 globus-net-manager (0.7-1+gt6.@distro@) @distro@; urgency=low
 
   * add file paramter to logging driver to set a file to log to.  use manager=logging;file=/path/to/file;.
